media/error_tc/error_262.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_WcMcd7e.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_WcMcd7e.cpp:8:1: error: expected ';' before '}' token
 }
 ^
